# text-game-revised

./: .gitignore  CMakeLists.txt  LICENSE  compile.sh  my_program
src/: character.hpp  equipment.hpp  equipment_def.cpp  game.cpp  game.hpp  inventory.hpp  main.cpp  save.hpp  trait.hpp  utils.hpp  world.hpp
